--- a/package.json
+++ b/package.json
@@ -102,5 +102,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage" : "http://yuantongkang.github.io/cnode"
+  "homepage" : "http://yuantongkang.github.io/cnode/build"
 }
